# industrial-surface-defect-detector

./: .gitignore  LICENSE  README.md  demo.py  download_good_steel.py  download_unknown.py  evaluate.py  explore.py  explore_data.py  hf_demo.py  main.py  plot_training.py  practice.py  preprocess.py  pyproject.toml  start-project.sh  train.py  view_samples.py
